[package]
name = "token-vesting"
version = "0.1.0"
description = "Token Vesting Contract"
edition = "2018"
authors = ["Tengiz Sharafiev"]

[lib]
crate-type = ["cdylib", "lib"]
name = "token_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
